# exceltool

./: .gitignore  CLAUDE.md  README.md  core.py  exceltool.py  pyproject.toml  requirements.txt  start.bat  test_core.py  test_exceltool.py  update-and-run.bat  update.bat
.github/workflows/: ci.yml
