[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "exceltool"
version = "1.0.0"
description = "Tkinter-GUI-Toolbox: CSV/XLS/XLSX→Excel, Blattschutz entfernen, OpenTrans/ORDERS05/EDIFACT-Parser, CSV-Splitter, XML→CSV"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ShanLanar" }]
keywords = ["excel", "csv", "edifact", "opentrans", "orders05", "tkinter", "b2b"]
classifiers = [
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]
dependencies = [
    "pandas>=1.3",
    "openpyxl>=3.0",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
exceltool = "exceltool:main"

[tool.setuptools]
py-modules = ["exceltool"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501 (Zeilenlänge) bewusst aus, um bestehende GUI-/Meldungstexte nicht umzubrechen.
ignore = ["E501"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
