[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "exceltool"
version = "1.0.0"
description = "Tkinter-GUI-Toolbox: CSV/XLS/XLSX→Excel, Blattschutz entfernen, OpenTrans/ORDERS05/EDIFACT-Parser, CSV-Splitter, XML→CSV"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ShanLanar" }]
dependencies = [
    "pandas",
    "openpyxl",
    "xlrd",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["exceltool"]
